--- a/momentMVC/Views/Start/Index.cshtml
+++ b/momentMVC/Views/Start/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Start</h1>
 <p class="indexp"> Välkommen till Rödinges bussar. Bussarna i staden som tar dig från punkt A till punkt B.</p>
 <div class="viewTest">
-    <a href="/ViewBagTest">ViewBagtest</a>
+    <a href="/ViewBagTest">ViewBagtest & ViewData</a>
 </div>
 
 <div class="timetable">
