--- a/momentMVC/Views/Start/ViewBagTest.cshtml
+++ b/momentMVC/Views/Start/ViewBagTest.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "ViewBagTest";
     }
-    <h2>ViewBagTest</h2>
+    <h2>ViewBagTest & ViewDatatest</h2>
     <p> Nu har jag via controllern testat ViewBag som nedan skriver ut en text direkt från controllern:</p>
 
 
