--- a/momentMVC/Views/BusInfo/BusInformation.cshtml
+++ b/momentMVC/Views/BusInfo/BusInformation.cshtml
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="grid1">
-<p>Dubbeldäckare till Rivet</p>
+<b>Dubbeldäckare till Rivet</b>
 <p>Totalt antal platser på bussen: <span>@Model?.Bus1?.TotalSeats</span></p>
 
         </div>
@@ -20,7 +20,7 @@
             <img src="../images/long.jpg" alt="bild på bussäten inuti bussen ">
         </div>
         <div class="grid3">
-          <p>Stadsbuss till Malmtorp</p>  
+          <b>Stadsbuss till Malmtorp</b>  
           <p>Totalt antal platser på bussen: <span>@Model?.Bus2?.TotalSeats</span></p>
 
         </div>
@@ -28,7 +28,7 @@
                      <img src="../images/emdrup.jpg" alt="bild på gul buss i stan">
         </div>
         <div class="grid5">
-            <p>Landsvägsbuss till Ärla</p>
+            <b>Landsvägsbuss till Ärla</b>
                 <p>Totalt antal platser på bussen: <span>@Model?.Bus3?.TotalSeats</span></p>
         </div>
         <div class="grid6">
